@@ -1,6 +1,18 @@
 \name{NEWS}
 \title{News for Package 'rhdf5'}
 
+\section{Changes in version 2.32.2}{
+  \subsection{BUG FIXES}{
+    \itemize{
+      \item \code{NA} values in logical datatypes are now preserved when 
+      written and read back into R 
+      (https://github.com/grimbough/rhdf5/issues/58).
+      \item Fixed error when trying to write a vector containing only empty
+      strings (https://github.com/grimbough/rhdf5/issues/60).
+    }
+  }
+}
+
 \section{Changes in version 2.32.0}{
   \subsection{NEW FEATURES}{
     \itemize{
